--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
+    "classnames": "^2.2.6",
     "gatsby": "^2.24.77",
     "gatsby-image": "^2.4.21",
     "gatsby-plugin-alias-imports": "^1.0.5",
@@ -34,6 +35,7 @@
     "react-helmet": "^6.1.0",
     "react-jss": "^10.4.0",
     "react-typography": "^0.16.19",
+    "react-use": "^15.3.4",
     "typography": "^0.16.19"
   },
   "devDependencies": {
