--- a/package.json
+++ b/package.json
@@ -12,35 +12,39 @@
     "start": "npm run develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
+    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1",
+    "preload-fonts": "gatsby-preload-fonts"
   },
   "dependencies": {
     "classnames": "^2.2.6",
-    "gatsby": "^2.24.77",
-    "gatsby-image": "^2.4.21",
+    "gatsby": "^2.29.0-next.0",
+    "gatsby-image": "^2.6.0",
     "gatsby-plugin-alias-imports": "^1.0.5",
-    "gatsby-plugin-jss": "^2.3.13",
-    "gatsby-plugin-manifest": "^2.4.34",
-    "gatsby-plugin-offline": "^3.2.31",
-    "gatsby-plugin-preload-fonts": "^1.2.28",
-    "gatsby-plugin-react-helmet": "^3.3.14",
-    "gatsby-plugin-sharp": "^2.6.42",
-    "gatsby-plugin-sitemap": "^2.6.0",
-    "gatsby-plugin-typography": "^2.5.13",
-    "gatsby-source-filesystem": "^2.3.34",
-    "gatsby-transformer-sharp": "^2.5.17",
+    "gatsby-plugin-image": "^0.4.0-next.0",
+    "gatsby-plugin-jss": "^2.5.0",
+    "gatsby-plugin-manifest": "^2.7.0",
+    "gatsby-plugin-offline": "^3.5.0",
+    "gatsby-plugin-preload-fonts": "^1.4.0",
+    "gatsby-plugin-react-helmet": "^3.5.0",
+    "gatsby-plugin-robots-txt": "^1.5.3",
+    "gatsby-plugin-sharp": "^2.11.0-next.0",
+    "gatsby-plugin-sitemap": "^2.7.0",
+    "gatsby-plugin-typography": "^2.7.0",
+    "gatsby-source-filesystem": "^2.6.1",
+    "gatsby-transformer-sharp": "^2.9.0-next.0",
+    "gsap": "^3.5.1",
     "ramda": "^0.27.1",
     "ramdasauce": "^2.1.3",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-helmet": "^6.1.0",
-    "react-jss": "^10.4.0",
+    "react-jss": "^10.5.0",
     "react-typography": "^0.16.19",
     "react-use": "^15.3.4",
     "typography": "^0.16.19"
   },
   "devDependencies": {
-    "prettier": "^2.1.2"
+    "prettier": "^2.2.1"
   },
   "repository": {
     "type": "git",
