--- a/package.json
+++ b/package.json
@@ -17,31 +17,28 @@
   },
   "dependencies": {
     "classnames": "^2.2.6",
-    "gatsby": "^2.29.0-next.0",
-    "gatsby-image": "^2.6.0",
+    "gatsby": "^3.2.0",
+    "gatsby-image": "^3.2.0",
     "gatsby-plugin-alias-imports": "^1.0.5",
-    "gatsby-plugin-image": "^0.4.0-next.0",
-    "gatsby-plugin-jss": "^2.5.0",
-    "gatsby-plugin-manifest": "^2.7.0",
-    "gatsby-plugin-offline": "^3.5.0",
-    "gatsby-plugin-preload-fonts": "^1.4.0",
-    "gatsby-plugin-react-helmet": "^3.5.0",
+    "gatsby-plugin-image": "^1.2.0",
+    "gatsby-plugin-jss": "^3.2.0",
+    "gatsby-plugin-manifest": "^3.2.0",
+    "gatsby-plugin-offline": "^4.2.0",
+    "gatsby-plugin-preload-fonts": "^2.2.0",
+    "gatsby-plugin-react-helmet": "^4.2.0",
     "gatsby-plugin-robots-txt": "^1.5.3",
-    "gatsby-plugin-sharp": "^2.11.0-next.0",
-    "gatsby-plugin-sitemap": "^2.7.0",
-    "gatsby-plugin-typography": "^2.7.0",
-    "gatsby-source-filesystem": "^2.6.1",
-    "gatsby-transformer-sharp": "^2.9.0-next.0",
+    "gatsby-plugin-sharp": "^3.2.0",
+    "gatsby-plugin-sitemap": "^4.0.0",
+    "gatsby-source-filesystem": "^3.2.0",
+    "gatsby-transformer-sharp": "^3.2.0",
     "gsap": "^3.5.1",
     "ramda": "^0.27.1",
     "ramdasauce": "^2.1.3",
-    "react": "^16.14.0",
-    "react-dom": "^16.14.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
     "react-jss": "^10.5.0",
-    "react-typography": "^0.16.19",
-    "react-use": "^15.3.4",
-    "typography": "^0.16.19"
+    "react-use": "^17.2.1"
   },
   "devDependencies": {
     "prettier": "^2.2.1"
