--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "riff-gatsby-starter",
+  "name": "evan-bancroft",
   "private": true,
-  "description": "Riff's Gatsby Starter",
-  "version": "0.1.0",
-  "author": "Riff Creative <hello@riffcreativestudio.com>",
-  "license": "COPYRIGHT (C) 2020 RIFF CREATIVE STUDIO. ALL RIGHTS RESERVED.",
+  "description": "Evan Bancroft's Portfolio",
+  "version": "1.0.0",
+  "author": "@evanbancroft",
+  "license": "COPYRIGHT (C) 2021 EVAN BANCROFT. ALL RIGHTS RESERVED.",
   "scripts": {
     "build": "gatsby build",
     "develop": "gatsby develop",
@@ -19,7 +19,9 @@
     "classnames": "^2.2.6",
     "gatsby": "^3.2.0",
     "gatsby-image": "^3.2.0",
+    "gatsby-omni-font-loader": "^1.3.1",
     "gatsby-plugin-alias-imports": "^1.0.5",
+    "gatsby-plugin-google-gtag": "^3.4.0",
     "gatsby-plugin-image": "^1.2.0",
     "gatsby-plugin-jss": "^3.2.0",
     "gatsby-plugin-manifest": "^3.2.0",
